crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/bind_shorthand_counts_as_reference.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import Dialog from "./Dialog.svelte";
let open = true;
</script>

<Dialog bind:open />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
