crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/directive_names_count_as_references.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import { inView } from "./actions";
import { fade } from "./transitions";
</script>

<div use:inView transition:fade>hi</div>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
