crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/no_undeclared_variables_not_triggered_for_exported_module_script_functions.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte

<script lang="ts" module>
	export const someFunction = () => {
		console.log("hai!");
	};

	const someOtherFunction = () => {
		console.log("heyyy");
	};
</script>

<script lang="ts">
	someFunction();
	someOtherFunction();
</script>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
