crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/no_unused_imports_flags_truly_unused_script_bindings.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import { unusedImport } from "./other";
let unusedLet = 42;

import Button from "./Button.svelte";
let name = "alice";
</script>

<Button>{name}</Button>

```

# Emitted Messages

```block
file.svelte:2:8 lint/correctness/noUnusedImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This import is unused.
  
    1 │ <script lang="ts">
  > 2 │ import { unusedImport } from "./other";
      │        ^^^^^^^^^^^^^^^^
    3 │ let unusedLet = 42;
    4 │ 
  
  i Unused imports might be the result of an incomplete refactoring.
  
  i Unsafe fix: Remove the unused imports.
  
    1   │ - 
    2   │ - import·{·unusedImport·}·from·"./other";
      1 │ + 
    3 2 │   let unusedLet = 42;
    4 3 │   
  

```

```block
file.svelte:3:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable unusedLet is unused.
  
    1 │ <script lang="ts">
    2 │ import { unusedImport } from "./other";
  > 3 │ let unusedLet = 42;
      │     ^^^^^^^^^
    4 │ 
    5 │ import Button from "./Button.svelte";
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend unusedLet with an underscore.
  
    1 1 │   
    2 2 │   import { unusedImport } from "./other";
    3   │ - let·unusedLet·=·42;
      3 │ + let·_unusedLet·=·42;
    4 4 │   
    5 5 │   import Button from "./Button.svelte";
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 warnings.
```
