crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/no_unused_imports_or_variables_for_template_references.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import Button from "./Button.svelte";
import type { User } from "./types";
import { formatName } from "./utils";

let count: number = 0;
let user: User = { name: "alice" };
const items = ["a", "b"];
function handleClick() { count++; }
</script>

<Button on:click={handleClick}>
  Count: {count}, name: {formatName(user.name)}
</Button>

{#each items as item}
  <span>{item}</span>
{/each}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
