crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/snippet_parameter_used_in_body_is_not_unused.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
let show = true;
</script>

{#if show}
  {#snippet card(label: string)}
    <span>{label}</span>
  {/snippet}
{/if}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
