crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/spread_attribute_counts_as_template_reference.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
const props = { id: "x", "data-test": "y" };
</script>

<input {...props} />

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
