crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/type_only_import_used_in_snippet_type_is_not_unused.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import type { IconType } from "./icons";
</script>

{#snippet card(p: { icon: IconType })}
  <span>{p.icon}</span>
{/snippet}

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
