crates/biome_cli/tests/snapshots/main_cases_svelte_cross_language_rules/use_import_type_quiet_for_template_referenced_imports.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 520
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.svelte`

```svelte
<script lang="ts">
import Button from "./Button.svelte";
import { capitalize } from "./utils";

let name = "alice";
</script>

<Button>{capitalize(name)}</Button>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
